--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card Genie - Smart Credit Card Recommendations</title>
+    <title>Credit Card Genie - Smart Credit Card Recommendations</title>
     <meta name="description" content="Get personalized credit card recommendations based on your spending patterns" />
-    <meta name="author" content="Card Genie" />
+    <meta name="author" content="Credit Card Genie" />
 
-    <meta property="og:title" content="Card Genie - Smart Credit Card Recommendations" />
+    <meta property="og:title" content="Credit Card Genie - Smart Credit Card Recommendations" />
     <meta property="og:description" content="Get personalized credit card recommendations based on your spending patterns" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
