update: project name

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saving Maximizer - Smart Credit Card Recommendations</title>
+    <title>SaveMax - Smart Credit Card Recommendations</title>
     <meta name="description" content="Get personalized credit card recommendations based on your spending patterns" />
-    <meta name="author" content="Saving Maximizer" />
+    <meta name="author" content="SaveMax" />
 
-    <meta property="og:title" content="Saving Maximizer - Smart Credit Card Recommendations" />
+    <meta property="og:title" content="SaveMax - Smart Credit Card Recommendations" />
     <meta property="og:description" content="Get personalized credit card recommendations based on your spending patterns" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
